--- a/src/main/webapp/playGame.html
+++ b/src/main/webapp/playGame.html
@@ -24,14 +24,14 @@
   <title>Streer Explorer</title>
 
 </head>
-<body>
+<body class='light-mode'>
   <!-- All the content for the navigation bar -->
   <nav>
     <div class='nav-wrapper'>
       <div class='container'>
         <a href='#' class='brand-logo'>Street Explorer</a>
         <ul class='right hide-on-med-and-down'>
-          <li><a href='#'><i class='material-icons'>brightness_4</i></a></li>
+          <li><a href='#'><i class='material-icons' onclick='changeToOrFromDarkMode()'>brightness_4</i></a></li>
           <li class='active'><a href='#'>Home</a></li>
           <li><a href='#'>Create Game</a></li>
         </ul>
