Fix wher it should say 'add stage' and added hint

--- a/src/main/webapp/createGame.html
+++ b/src/main/webapp/createGame.html
@@ -38,10 +38,15 @@
         <div id='stages'>
           <input type='button' value='Stage 1' id="stage1">
         </div>
-        <input type='button' value='+ add hint' id='addHint' onclick='addStage()'>
+        <input type='button' value='+ add stage' id='addStage' onclick='addStage()'>
 
         <br/>
         <input id='starter-hint' type='text' name='Starter Hint' placeholder='Starter (spawn location and first hint)' required>
+
+        <div id='hints'>
+            <input type='button' value='Hint 1' id="hint1">
+        </div>
+        <input type='button' value='+ add hint' id='addHint' onclick='addHint()'>
 
         <input type='button' value='Finish'>
     
