Add game to play on index page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,7 @@
 
   <script src='https://www.gstatic.com/charts/loader.js'></script>
 
+  <script src='js/playGame.js'></script>
   <script src='js/script.js'></script>
 
   <!--Import Google Icon Font-->
@@ -33,8 +34,7 @@
       <h1> Featured Map</h1>
     
       <div class='mapsToPlay'>
-        <div class='square'></div>
-        <div class='rectangle'></div>
+        <div id='featured-map'></div>
       </div>
     </div>
     
