--- a/src/main/webapp/resumeOrStartOver.html
+++ b/src/main/webapp/resumeOrStartOver.html
@@ -13,9 +13,6 @@
     
   <!--Import materialize.css from maeralizecss.com-->
   <link rel='stylesheet' href='css/materialize.min.css'>
-   
-  <!-- Compiled and minified JavaScript from materalizecss.com-->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js'></script>
 
   <!--  Scripts from materalizecss.com-->
   <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
@@ -27,11 +24,11 @@
 </head>
 <body class='light-mode' onload='onLoadFunctions("resumeOrStartOver")'>
   <div id='nav-bar'></div>
-  <div class='container'>
+  <div class='container center'>
     <h1>Would you like to...</h1>
-    <input type='button' onclick='restartGame()' value='Restart the Game' />
+    <input type='button' onclick='restartGame()' value='Restart the Game' id='resume-or-startover-button' />
     <h3>OR</h3>
-    <input type='button' onclick='continueGame()' value='Continue Game' />
+    <input type='button' onclick='continueGame()' value='Continue Game' id='resume-or-startover-button' />
   </div>
 </body>
 </html>
