Change variable names

--- a/src/main/webapp/gameInfo.html
+++ b/src/main/webapp/gameInfo.html
@@ -28,10 +28,10 @@
   <div id='nav-bar'></div>
   <div class='container'>
     <div id='map-name'></div>
-    <div id='map-image'></div>
-    <div id='map-rating'></div>
-    <div id='map-creator'></div>
     <div id='map-description'></div>
+    <div id='map-image'></div>
+    <div id='map-difficult'></div>
+    <div id='map-creator'></div>
     <div id='play-game'></div>
     <div id='map-rating'></div>
     <div id='comments'></div>
