--- a/src/main/webapp/gameInfo.html
+++ b/src/main/webapp/gameInfo.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href='images/streetExplorerLogo.png' rel='icon'>
+  
   <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDtRpnDqBAeTBM0gjAXIqe2u5vBLj15mtk'></script>
 
   <script src='https://www.gstatic.com/charts/loader.js'></script>
@@ -27,13 +29,13 @@
 <body class='light-mode' onload='onLoadFunctions("gameInfo")'>
   <div id='nav-bar'></div>
   <div class='container'>
+    <div id='map-rating' class='float-right'></div>
     <div id='map-name'></div>
-    <div id='map-description'></div>
-    <div id='map-image'></div>
-    <div id='map-difficult'></div>
     <div id='map-creator'></div>
+    <div id='map-image' class='float-right'></div>
+    <div id='map-description'></div>
     <div id='play-game'></div>
-    <div id='map-rating'></div>
+    <div id='rate-map'></div>
     <div id='comments'></div>
   </div>
 </body>
