--- a/src/main/webapp/profilePage.html
+++ b/src/main/webapp/profilePage.html
@@ -35,16 +35,14 @@
     <div class='center'>
       <h1>Profile</h1>
     </div>
-    <form action="/create-username-data" method='POST'>
-      <div class='input-field'>
-        <h5>Username</h5>
-        <input id='userName' type='text' name='userName' required>
-      </div>
-      <br>
-      <div id='username-availability-message'></div>
-      <br>
-      <input type="submit" value="Submit">
-    </form>
+    <div class='input-field'>
+    <h5>Username</h5>
+    <input id='userName' type='text' name='userName' required>
+    </div>
+    <br>
+    <div id='username-availability-message'></div>
+    <br>
+    <button type="button" onclick='submitUsername()' id='submit-username-button'>Submit</button>
   </div>
 </body>
 </html>
