Make changes suggested by Sara

--- a/src/main/webapp/profilePage.html
+++ b/src/main/webapp/profilePage.html
@@ -11,7 +11,7 @@
   <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
     
   <!--Import materialize.css from maeralizecss.com-->
-  <link rel='stylesheet' href='css/materialize.min.css'>
+  <link rel='stylesheet' href='/css/materialize.min.css'>
    
   <!--  Scripts from materalizecss.com-->
   <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
@@ -36,8 +36,8 @@
       <h1>Profile</h1>
     </div>
     <div class='input-field'>
-    <h5>Username</h5>
-    <input id='userName' type='text' name='userName' required>
+      <h5>Username</h5>
+      <input id='userName' type='text' name='userName' required>
     </div>
     <br>
     <div id='username-availability-message'></div>
