--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
   <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
     
   <!--Import materialize.css from maeralizecss.com-->
-  <link rel='stylesheet' href='css/materialize.min.css'>
+  <link rel='stylesheet' href='css/materialize.min.css' type='text/css'>
 
   <!--  Scripts from materalizecss.com-->
   <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
@@ -20,7 +20,7 @@
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-  <link rel='stylesheet' href='css/style.css'>
+  <link rel='stylesheet' href='/css/style.css'>
 
   <script src='js/script.js'></script>
   
@@ -34,7 +34,6 @@
   <div class=container>
     <div class='center'>
       <h1> Featured Map</h1>
-    
         <div id='featured-map'></div>
         <br/>
     </div>
