--- a/src/main/webapp/navBar.html
+++ b/src/main/webapp/navBar.html
@@ -17,7 +17,7 @@
   <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
   <script src='js/materialize.min.js'></script>
 
-  <link rel='stylesheet' href='css/style.css'>
+  <link rel='stylesheet' href='/css/style.css'>
 
   <script src='js/playGame.js'></script>
   <script src='js/script.js'></script>
