--- a/src/main/webapp/navBar.html
+++ b/src/main/webapp/navBar.html
@@ -4,7 +4,7 @@
   <link href='images/streetExplorerLogo.png' rel='icon'>
   
   <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDtRpnDqBAeTBM0gjAXIqe2u5vBLj15mtk'></script>
-
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src='https://www.gstatic.com/charts/loader.js'></script>
 
   <!--Import Google Icon Font-->
