--- a/src/main/webapp/resumeOrStartOver.html
+++ b/src/main/webapp/resumeOrStartOver.html
@@ -6,7 +6,8 @@
   <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDtRpnDqBAeTBM0gjAXIqe2u5vBLj15mtk'></script>
 
   <script src='https://www.gstatic.com/charts/loader.js'></script>
-
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  
   <script src='js/resumeOrStartOver.js'></script>
   <script src='js/script.js'></script>
 
