--- a/src/main/webapp/gameInfo.html
+++ b/src/main/webapp/gameInfo.html
@@ -30,7 +30,7 @@
   <div id='nav-bar'></div>
   <div class='container'>
     <div id='map-rating' class='float-right'></div>
-    <div id='map-name'></div>
+    <div id='map-name-and-difficulty'></div>
     <div id='map-creator'></div>
     <div id='map-image' class='float-right'></div>
     <div id='map-description'></div>
