--- a/src/main/webapp/navBar.html
+++ b/src/main/webapp/navBar.html
@@ -15,12 +15,16 @@
 
   <!--  Scripts from materalizecss.com-->
   <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
+
+  
+  <script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
+
   <script src='js/materialize.min.js'></script>
 
   <link rel='stylesheet' href='css/style.css'>
 
-  <script src='js/playGame.js'></script>
-  <script src='js/script.js'></script>
+  <!-- <script src='js/playGame.js'></script>
+  <script src='js/script.js'></script> -->
 
   <title>Street Explorer</title>
 
@@ -34,10 +38,11 @@
           <li><a href='#'><i class='material-icons' target="_top" onclick='changeToOrFromDarkMode()'>brightness_4</i></a></li>
           <li class='active'><a href='index.html' target="_top">Home</a></li>
           <li><a href='createGame.html' target="_top">Create Game</a></li>
-          <li><a href='#'>Login</a></li>
+          <div class='g-signin2' data-onsuccess='onSignIn' ></div>
         </ul>
       </div>
     </div>
   </nav>
+  <div class='g-signin2' data-onsuccess='onSignIn' ></div>
 </body>
 </html>
