--- a/src/main/webapp/afterGame.html
+++ b/src/main/webapp/afterGame.html
@@ -8,6 +8,10 @@
   
   <script src='https://www.gstatic.com/charts/loader.js'></script>
 
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <meta name="google-signin-client_id" content="683964064238-ccubt4o7k5oc9pml8n72id8q1p1phukl.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/api:client.js"></script>
+
   <script src='js/afterGame.js'></script>
   <script src='js/script.js'></script>
 
