--- a/src/main/webapp/gameInfo.html
+++ b/src/main/webapp/gameInfo.html
@@ -9,7 +9,11 @@
   <script src='https://www.gstatic.com/charts/loader.js'></script>
 
   <link rel='stylesheet' href='css/style.css'>
-
+  
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <meta name="google-signin-client_id" content="683964064238-ccubt4o7k5oc9pml8n72id8q1p1phukl.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/api:client.js"></script>
+  
   <script src='js/playGame.js'></script>
   <script src='js/gameInfo.js'></script>
   <script src='js/script.js'></script>
