--- a/src/main/webapp/profilePage.html
+++ b/src/main/webapp/profilePage.html
@@ -20,7 +20,11 @@
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
+  
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <meta name="google-signin-client_id" content="683964064238-ccubt4o7k5oc9pml8n72id8q1p1phukl.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/api:client.js"></script>
+  
   <link rel='stylesheet' href='css/style.css'>
   <script src='js/profilePage.js'></script>
   <script src='js/script.js'></script>
