fixed gapi onload

--- a/src/main/webapp/profilePage.html
+++ b/src/main/webapp/profilePage.html
@@ -23,8 +23,9 @@
   
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <meta name="google-signin-client_id" content="683964064238-ccubt4o7k5oc9pml8n72id8q1p1phukl.apps.googleusercontent.com">
-  <script src="https://apis.google.com/js/api:client.js"></script>
-  
+
+  <script src="https://apis.google.com/js/api:client.js?onLoad=onGoogleScriptLoaded" type="text/javascript" ></script>
+
   <link rel='stylesheet' href='css/style.css'>
   <script src='js/profilePage.js'></script>
   <script src='js/script.js'></script>
