--- a/src/main/webapp/playGame.html
+++ b/src/main/webapp/playGame.html
@@ -12,6 +12,7 @@
   <meta name="google-signin-client_id" content="683964064238-ccubt4o7k5oc9pml8n72id8q1p1phukl.apps.googleusercontent.com">
   <script src="https://apis.google.com/js/api:client.js"></script>
   
+  <script src='js/playGameClasses.js'></script>
   <script src='js/playGame.js'></script>
   <script src='js/script.js'></script>
 
