Limit number of maps shown on index page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,5 +41,8 @@
     </div>
   </div>
   <div id='all-maps' class='row card'></div>
+  <div class='center'>
+    <input type='button' id='more-maps' value='Load More Maps' onclick='loadMoreMaps(1)'/>
+  </div>
 </body>
 </html>
