--- a/src/main/webapp/gameInfo.html
+++ b/src/main/webapp/gameInfo.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <link href='images/streetExplorerLogo.png' rel='icon'>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDtRpnDqBAeTBM0gjAXIqe2u5vBLj15mtk'></script>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
