--- a/src/main/webapp/createGame.html
+++ b/src/main/webapp/createGame.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <link href='images/streetExplorerLogo.png' rel='icon'>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <script src='https://www.gstatic.com/charts/loader.js'></script>
 
