--- a/src/main/webapp/navBar.html
+++ b/src/main/webapp/navBar.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <link href='images/streetExplorerLogo.png' rel='icon'>
+
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDtRpnDqBAeTBM0gjAXIqe2u5vBLj15mtk'></script>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
