--- a/src/main/webapp/resumeOrStartOver.html
+++ b/src/main/webapp/resumeOrStartOver.html
@@ -3,6 +3,9 @@
 <head>
   <link href='images/streetExplorerLogo.png' rel='icon'>
 
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
   <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDtRpnDqBAeTBM0gjAXIqe2u5vBLj15mtk'></script>
 
   <script src='https://www.gstatic.com/charts/loader.js'></script>
@@ -32,9 +35,9 @@
 <body class='light-mode' onload='onLoadFunctions("resumeOrStartOver")'>
   <div id='nav-bar'></div>
   <div class='container center'>
-    <h1>Would you like to...</h1>
+    <h2>Would you like to...</h2>
     <input type='button' onclick='restartGame()' value='Restart the Game' id='resume-or-startover-button' />
-    <h3>OR</h3>
+    <h4>OR</h4>
     <input type='button' onclick='continueGame()' value='Continue Game' id='resume-or-startover-button' />
   </div>
 </body>
