Move legend to play game place and improve overall style

--- a/src/main/webapp/playGame.html
+++ b/src/main/webapp/playGame.html
@@ -37,15 +37,7 @@
   <div id='nav-bar'></div>
   <div id='game'>
       <div id='playMap'></div>
-      <div id='game-info'>
-        <div id='legend'>
-          <p class='font-size-slightly-larger'>Legend for markers:</p>
-          <p>
-            Found: <img src='images/marker_found.png' alt='green marker found' width='3%'/>
-            Not Found: <img src='images/marker_notfound.png' alt='orange marker found' width='3%'/>
-          </p>
-        </div>
-      </div>
+      <div id='game-info'></div>
   </div>
 </body>
 </html>
