Enhance info sidebar to be compatible with smaller screens

--- a/src/main/webapp/playGame.html
+++ b/src/main/webapp/playGame.html
@@ -25,6 +25,9 @@
   <!--Import materialize.css from maeralizecss.com-->
   <link rel='stylesheet' href='/css/materialize.min.css'>
 
+  <!-- Import animate.css -->
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css'/>
+
   <!--  Scripts from materalizecss.com-->
   <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
   <script src='js/materialize.min.js'></script>
