Add loading screen to index.html page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,6 +35,7 @@
   <div id='nav-bar'></div>
   <!-- TODO: Rather than using JS to generate the Nav-Bar use an iframe -->
   <!-- <iframe src='navBar.html' width='100%'></iframe> -->
+  <div id='loading'></div>
   <div class=container>
     <div class='center'>
       <h2 id='featured-map-text'></h2>
