Fix no empty fields and not able to click label

--- a/src/main/webapp/createGame.html
+++ b/src/main/webapp/createGame.html
@@ -41,7 +41,7 @@
 
     <div id='extra-margin'>
       <div class='input-field s3'>
-          <input id='title' type='text' name='title' required>
+          <input id='title' type='text' name='title'>
           <label for='title'>Title</label>
       </div>
   
@@ -61,24 +61,24 @@
       <div id='hints'>
         <div id='stage1Hints'>
           <div class='input-field'>
-            <input id='key' type='text'>
-            <label for='key'>Stage Key</label>
+            <input id='stage1key' type='text'>
+            <label for='stage1key'>Stage Key</label>
           </div>
           <div class='input-field'>
-            <input type='text' id='starter-position'>
-            <label for='starter-position'>Starter Position (click on map to get coordinates)</label>
+            <input type='text' id='stage1starter-position'>
+            <label for='stage1starter-position'>Starter Position (click on map to get coordinates)</label>
           </div>
           <div class='input-field'>
-            <input type='text' id='starter-hint' required>
-            <label for='starter-hint'>Starter Hint</label>
+            <input type='text' id='stage1starter-hint'>
+            <label for='stage1starter-hint'>Starter Hint</label>
           </div>
           <div class='input-field'>
-            <input type='text' id='hint1-position'>
-            <label for='hint1-position'>Hint 1 Position (click on map to get coordinates)</label>
+            <input type='text' id='stage1hint1-position'>
+            <label for='stage1hint1-position'>Hint 1 Position (click on map to get coordinates)</label>
           </div>
           <div class='input-field'>
-            <input type='text' id='hint1'>
-            <label for='hint1'>Hint 1</label>
+            <input type='text' id='stage1hint1'>
+            <label for='stage1hint1'>Hint 1</label>
           </div>
         </div>
       </div>
