Edit feedback from

--- a/src/main/webapp/afterGame.html
+++ b/src/main/webapp/afterGame.html
@@ -54,9 +54,8 @@
       <i class='large material-icons' onclick='stars(4)'>star_border</i>
       <i class='large material-icons' onclick='stars(5)'>star_border</i>
     </div>
-    <textarea id='comment' placeholder='Enter your thoughts here on the map!' class='large-text-input'></textarea>
     <br/>
-    <br/>
+    <p>Ratings auto submit!</p>
     <input type='submit' id='play-game-button' value='Play Again' onclick='sendDataToServer("Play Again")'>
     <input type='submit' id='back-home' value='Back To Home' onclick='sendDataToServer("Back To Home")'>
   </div>
