Changes to API KEY

--- a/src/main/webapp/createGame.html
+++ b/src/main/webapp/createGame.html
@@ -7,7 +7,7 @@
   
   <script src='https://www.gstatic.com/charts/loader.js'></script>
 
-  <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDtRpnDqBAeTBM0gjAXIqe2u5vBLj15mtk&libraries=places'></script>
+  <!-- <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDtRpnDqBAeTBM0gjAXIqe2u5vBLj15mtk&libraries=places'></script> -->
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   
   <script src="https://apis.google.com/js/platform.js" async defer></script>
