--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-  <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDtRpnDqBAeTBM0gjAXIqe2u5vBLj15mtk'></script>
+  <!-- <script src='https://maps.googleapis.com/maps/api/js?key='></script> -->
   <script src='https://www.gstatic.com/charts/loader.js'></script>
 
   <!--Import Google Icon Font-->
